# case-gb-2

./: Makefile  README.md  main.py  pyproject.toml
dags/: dag_spotify.py  dag_vendas.py
dags/variables/: dag_spotify.json  dag_vendas.json
data/: base.csv
doc/: case_engenharia_de_dados_-_grupo_boticrio.pdf:Zone.Identifier
functions/spotify/: main.py  requirements.txt
functions/spotify/functions/: api.py  episodes.py  function.py  search.py
functions/vendas/: main.py
functions/vendas/functions/: function.py  vendas.py
scripts/: create_datasets.py  rebuild_base.py
sql/: tabela_1.sql  tabela_2.sql  tabela_3.sql  tabela_4.sql  tabela_7.sql
